feat: Add LOCKIN btn and Comments on each function

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <div class="container">
     <div class="wrapper">
       <div class="spinning"></div>
+      <button id="chmpPick"><span>LOCK IN</span></button>
+      <button class="chmpPickBorder"></button>
     </div>
     <div class="filter_container">
       <div class="filter_Tbox">
